--- a/saved/removed.html
+++ b/saved/removed.html
@@ -1,1 +1,386 @@
+<!doctype html>
+<!--
+	Photogenic by FreeHTML5.co
+	URL: https://freehtml5.co
+-->
+<html lang="en">
 
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <!-- owl carousel css-->
+    <link rel="stylesheet" href="owl-carousel/assets/owl.carousel.min.css" type="text/css">
+	<style>
+			div.gallery {
+			  border: 1px solid #ccc;
+			}
+			
+			div.gallery:hover {
+			  border: 1px solid #777;
+			}
+			
+			div.gallery img {
+			  width: 100%;
+			  height: auto;
+			}
+			
+			div.desc {
+			  padding: 15px;
+			  text-align: center;
+			}
+			
+			* {
+			  box-sizing: border-box;
+			}
+			
+			.responsive {
+			  padding: 0 6px;
+			  float: left;
+			  width: 24.99999%;
+			}
+			
+			@media only screen and (max-width: 700px) {
+			  .responsive {
+			    width: 49.99999%;
+			    margin: 6px 0;
+			  }
+			}
+			
+			@media only screen and (max-width: 500px) {
+			  .responsive {
+			    width: 100%;
+			  }
+			}
+			
+			.clearfix:after {
+			  content: "";
+			  display: table;
+			  clear: both;
+			}
+	</style>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Belfast Ultimate Frisbee</title>
+</head>
+
+<body>
+
+    <div id="fh5co-hero-carousel" class="carousel slide header" data-ride="carousel">
+        <nav class="navbar fixed-top navbar-expand-xl">
+            <div class="container">
+                <a class="navbar-brand mobile-logo" href="#"><img src="images/testimages/BUlogo.jpg" alt="" width="100" height="100"/></a>
+                <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse">
+                    <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
+
+                <div id="my-nav" class="collapse navbar-collapse">
+
+                    <div>
+                        <p class="text-left follow">Follow Us:</p>
+                        <ul class="navbar-nav float-left social-links">
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
+								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
+                            </li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <ul class="navbar-nav mx-auto logo-desktop">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#"><img src="images/testimages/BUlogo.jpg" alt="" width="100" height="100"/></a>
+                        </li>
+                    </ul>
+
+                    <ul class="navbar-nav float-right menu-links">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about-us">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#some-images">Some Images</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#news">News</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU6.jpg">
+
+                <div class="carousel-caption d-md-block">
+                    <p class="frst-hrd">1</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
+
+                </div>
+
+
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU8.jpg">
+
+                <div class="carousel-caption d-md-block">
+                    <p class="frst-hrd">2</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100 home-bg" alt="home-bg" src="images/testimages/BU5.jpg">
+
+                <div class="carousel-caption d-md-block">
+                    <p class="frst-hrd">3</p>
+                    <h5>BELFAST ULTIMATE FRISBEE</h5>
+                    <p>JOIN US</p>
+
+                </div>
+            </div>
+            <div class="scroll-button">
+                <p>Scroll down to see more...</p>
+                <a href="#about-us" class="page-scroll">
+                    <img src="images/arrows-down.png" alt="arrow down" />
+                </a>
+
+            </div>
+        </div>
+        <ul class="carousel-indicators">
+            <li class="active" data-target="#fh5co-hero-carousel" data-slide-to="0" aria-current="location"></li>
+            <li data-target="#fh5co-hero-carousel" data-slide-to="1"></li>
+            <li data-target="#fh5co-hero-carousel" data-slide-to="2"></li>
+        </ul>
+    </div>
+
+
+    <div class="container-fluid fh5co-about-us" id="about-us">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+
+                    <svg class="back-bg" viewBox="0 0 800 800">
+                        <defs>
+                            <linearGradient id="PSgrad_0" x1="0%" x2="100%" y1="0%" y2="0%">
+                                <stop offset="0%" stop-color="rgb(88,192,255)" stop-opacity="1" />
+                                <stop offset="100%" stop-color="rgb(18,112,228)" stop-opacity="1" />
+                            </linearGradient>
+
+                        </defs>
+                        <path fill-rule="evenodd" fill="rgb(18, 112, 228)"
+                            d="M6.000,-0.000 L499.000,-0.000 C502.314,-0.000 505.000,2.686 505.000,6.000 L505.000,612.000 C505.000,615.314 502.314,618.000 499.000,618.000 L6.000,618.000 C2.686,618.000 -0.000,615.314 -0.000,612.000 L-0.000,6.000 C-0.000,2.686 2.686,-0.000 6.000,-0.000 Z" />
+                        <path fill="url(#PSgrad_0)"
+                            d="M6.000,-0.000 L499.000,-0.000 C502.314,-0.000 505.000,2.686 505.000,6.000 L505.000,612.000 C505.000,615.314 502.314,618.000 499.000,618.000 L6.000,618.000 C2.686,618.000 -0.000,615.314 -0.000,612.000 L-0.000,6.000 C-0.000,2.686 2.686,-0.000 6.000,-0.000 Z" />
+                    </svg>
+
+                    <div class="owl-carousel owl-carousel1 owl-theme">
+                        <div>
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                        </div>
+                        <div>
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                        </div>
+                        <div>
+                            <img src="images/testimages/BU3.jpg" alt="" class="img-fluid" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <div class="about-us-content">
+                        <h2>ABOUT US</h2>
+                        <p>We're an amateur Ultimate Frisbee team in Belfast. We currently play at the top of Ormeau park beside the inside tennis courts. Join us on Mondays 6.30pm!</p>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+	<div class="container-fluid fh5co-some-images" id="some-images">
+		<h2>Some Images!</h2>
+	    <p>Testing</p>
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU1.jpg">
+		      <img src="images/testimages/BU1.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU2.jpg">
+		      <img src="images/testimages/BU2.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU3.jpg">
+		      <img src="images/testimages/BU3.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+		
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU4.jpg">
+		      <img src="images/testimages/BU4.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU5.jpg">
+		      <img src="images/testimages/BU5.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU6.jpg">
+		      <img src="images/testimages/BU6.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU7.jpg">
+		      <img src="images/testimages/BU7.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU8.jpg">
+		      <img src="images/testimages/BU8.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/BU9.jpg">
+		      <img src="images/testimages/BU9.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+
+		<div class="responsive">
+		  <div class="gallery">
+		    <a target="_blank" href="images/testimages/B10.jpg">
+		      <img src="images/testimages/BU10.jpg" alt="">
+		    </a>
+		    <div class="desc">Add a description of the image here</div>
+		  </div>
+		</div>
+	<div class="clearfix"></div>
+	</div>           
+
+	
+    <div class="container-fluid fh5co-news" id="news">
+        <div class="container">
+            <h2>OUR NEWS</h2>
+            <div class="row">
+                <div class="owl-carousel owl-carousel2 owl-theme">
+                    <div>
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
+                            <div class="card-body text-left pr-0 pl-0">
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
+                            <div class="card-body text-left pr-0 pl-0">
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div>
+                        <div class="card text-center"> <img class="card-img-top" src="images/testimages/BU10.jpg" alt="">
+                            <div class="card-body text-left pr-0 pl-0">
+                                <h5>Join us at Training!</h5>
+                                <p class="card-text">Training 6.30pm Ormeau Park! No experience necessary!</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer class="container-fluid fh5co-footer">
+        <div class="container" id="contact">
+            <div class="row">
+                <div class="col-lg-5">
+                    <h2>CONTACT</h2>
+                    <p>
+                        <span class="email"><img src="images/icons/email.png"
+                                alt="email icon" /></span><b>chairperson.belfastultimate@gmail.com</b>
+                    </p>
+                    <h3>We Are Social:</h3>
+                    <ul class="navbar-nav float-left social-links footer-social">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://www.facebook.com/BelfastUltimate"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="nav-item">
+							<a class="nav-link" href="https://www.tiktok.com/@belfast.ultimate?_t=ZN-8zQkpRQ0FzK&_r=1"><i class=".fa-external-link-square-alt"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <div class="container-fluid copy">
+        <div class="col-lg-12">
+            <p>&copy; 2018 Photogenic. All rights Reserved. Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5.co</a>.</p>
+        </div>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="owl-carousel/owl.carousel.min.js"></script>
+    <script src="js/isotope-docs.min.js?6"></script>
+    <script src="js/main.js"></script>
+</body>
+
+
+</html>
